--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,12 @@
     android:padding="10dp"
     android:background="#FFEB3B"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="Sign In"
         android:textColor="@color/black"
         android:textSize="50dp"
         android:textStyle="bold"
@@ -23,7 +23,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/username"
+        android:id="@+id/username1"
         android:hint="Username"
         android:textSize="25dp"
         android:textColorHint="@color/black"
@@ -31,10 +31,11 @@
         android:layout_marginBottom="30dp"
         android:paddingLeft="20dp"/>
 
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/password"
+        android:id="@+id/password1"
         android:hint="Password"
         android:textSize="25dp"
         android:textColorHint="@color/black"
@@ -42,34 +43,13 @@
         android:layout_marginBottom="30dp"
         android:paddingLeft="20dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/repassword"
-        android:hint="Confirm Password"
-        android:textSize="25dp"
-        android:textColorHint="@color/black"
-        android:background="@drawable/editextbackground"
-        android:layout_marginBottom="30dp"
-        android:paddingLeft="20dp"/>
-    
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:id="@+id/signup"
-        android:text="Register"
+        android:id="@+id/signin1"
+        android:text="Sign In"
         android:textSize="20dp"
         android:backgroundTint="@color/black"
         android:layout_marginBottom="30dp" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/signin"
-        android:text="already have an account"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        android:backgroundTint="#02000000"
-        android:layout_marginBottom="30dp" />
 </LinearLayout>
